// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Utilities/Container Fixed 1`] = `
<div
  className="MuiContainer-root ContainerDemo-root-86 MuiContainer-fixed MuiContainer-maxWidthLg"
>
  Example content here
</div>
`;

exports[`Storyshots Utilities/Container Fluid 1`] = `
<div
  className="MuiContainer-root ContainerDemo-root-85 MuiContainer-maxWidthSm"
>
  Example content here
</div>
`;

exports[`Storyshots Utilities/Container Playground 1`] = `
<div
  className="MuiContainer-root ContainerDemo-root-84 MuiContainer-maxWidthLg"
>
  Example content here
</div>
`;
